--- a/package.json
+++ b/package.json
@@ -5,11 +5,47 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "type-check": "tsc --project tsconfig.json --pretty --noEmit",
+    "lint": "eslint --ext js,jsx,ts,tsx",
+    "lint:fix": "yarn lint --fix"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.3.0",
+    "aws-sdk": "^2.803.0",
+    "axios": "^0.21.0",
+    "fuse.js": "^6.4.3",
+    "html-to-image": "^1.3.20",
+    "micro-cors": "^0.1.1",
     "next": "10.0.3",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-autosuggest": "^10.0.4",
+    "react-dom": "17.0.1",
+    "react-tagcloud": "^2.0.0",
+    "vh-check": "^2.0.5"
+  },
+  "devDependencies": {
+    "@types/micro-cors": "^0.1.1",
+    "@types/node": "^14.14.10",
+    "@types/react": "^17.0.0",
+    "@types/react-autosuggest": "^10.0.1",
+    "@types/react-tagcloud": "^1.1.5",
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
+    "eslint": "^7.14.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.5.2",
+    "prettier": "^2.2.1",
+    "typescript": "^4.1.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
   }
 }
