--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,11 +89,19 @@ jobs:
       - name: Build
         run: yarn build
 
+      - name: Init EB
+        uses: hmanzur/actions-aws-eb@v1.0.0
+        with:
+          command: 'init --region ${{ secrets.AWS_DEFAULT_REGION }} --platform "Docker running on 64bit Amazon Linux 2" ${{ secrets.AWS_EB_ENVIRONMENT_NAME }}'
+        env:
+          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
       - name: Deploy to EB
         uses: hmanzur/actions-aws-eb@v1.0.0
         with:
           command: 'deploy ${{ secrets.AWS_EB_ENVIRONMENT_NAME }}'
         env:
-          AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
