--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,7 +92,7 @@ jobs:
       - name: Init EB
         uses: hmanzur/actions-aws-eb@v1.0.0
         with:
-          command: 'init --region ${{ secrets.AWS_DEFAULT_REGION }} --platform Docker\ running\ on\ 64bit\ Amazon\ Linux\ 2 ${{ secrets.AWS_EB_ENVIRONMENT_NAME }}'
+          command: 'init --region ${{ secrets.AWS_DEFAULT_REGION }} --platform docker ${{ secrets.AWS_EB_ENVIRONMENT_NAME }}'
         env:
           AWS_DEFAULT_REGION: ${{ secrets.AWS_DEFAULT_REGION }}
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
