--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "html-to-image": "^1.3.20",
     "micro-cors": "^0.1.1",
     "next": "10.0.3",
+    "next-i18next": "^7.0.1",
     "react": "17.0.1",
     "react-autosuggest": "^10.0.4",
     "react-dom": "17.0.1",
