--- a/.ebextensions/SSL.config.template
+++ b/.ebextensions/SSL.config.template
@@ -16,7 +16,7 @@ files:
     content: |
       # Force HTTPS
       server {
-        listen: 80;
+        listen 80;
         return 301 https://$host$request_uri;
       }
 
