--- a/.ebextensions/SSL.config.template
+++ b/.ebextensions/SSL.config.template
@@ -9,42 +9,13 @@ Resources:
       CidrIp: 0.0.0.0/0
 
 files:
-  /etc/nginx/conf.d/https.conf:
-    mode: "000644"
+  "/opt/elasticbeanstalk/hooks/appdeploy/post/99_setup_letsencrypt.sh":
+    mode: "000755"
     owner: root
     group: root
     content: |
-      # Force HTTPS
-      server {
-        listen 80;
-        return 301 https://$host$request_uri;
-      }
-
-      # HTTPS Server
-      server {
-        listen 443;
-        server_name localhost;
-        
-        ssl on;
-        ssl_certificate      /etc/letsencrypt/live/%DOMAIN%/fullchain.pem;
-        ssl_certificate_key  /etc/letsencrypt/live/%DOMAIN%/privkey.pem;
-        
-        ssl_session_timeout 5m;
-        
-        ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-        ssl_prefer_server_ciphers on;
-        
-        location / {
-          proxy_pass http://docker;
-          proxy_http_version 1.1;
-          
-          proxy_set_header Connection "";
-          proxy_set_header Host $host;
-          proxy_set_header X-Real-IP $remote_addr;
-          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-          proxy_set_header X-Forwarded-Proto https;
-        }
-      }
+      #!/usr/bin/env bash
+      sudo certbot --nginx --debug --non-interactive --email %EMAIL% --agree-tos --domains %DOMAIN% --keep
 
 container_commands:
   01_install_epel:
