--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,7 +85,7 @@ jobs:
           touch .env.local
           echo 'AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}' >> .env.local
           echo 'AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}' >> .env.local
-          sed 's/%DOMAIN%/${{ secrets.DOMAIN }}/g; s/%EMAIL%/${{ secrets.LETS_ENCRYPT_EMAIL }}/g' .ebextensions/SSL.config.template > .ebextensions/SSL.config
+          sed -i 's/%DOMAIN%/${{ secrets.DOMAIN }}/g; s/%EMAIL%/${{ secrets.LETS_ENCRYPT_EMAIL }}/g' .platform/hooks/postdeploy/setup_letsencrypt.sh
 
       - name: Build
         run: yarn build
