--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vh-check": "^2.0.5"
   },
   "devDependencies": {
+    "@types/gtag.js": "^0.0.3",
     "@types/micro-cors": "^0.1.1",
     "@types/node": "^14.14.10",
     "@types/react": "^17.0.0",
